--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,12 @@
     background: #1F2937;
     justify-content: space-between;
     flex: 1;
-    padding: 50px;
-    /* flex-direction: column; */
+    /* padding: 50px; */
+    flex-direction: column;
+    padding-top: 25px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 150px;
 }
 
 .header-logo {
@@ -44,13 +48,19 @@
     gap: 16px;
     background: gray;
     padding: 30px;
-    width: 400px;
+    width: 500px;
     height: 200px;
+    flex: 0 0 auto;
+    text-align: center;
 }
 
 .header-text-container{
-    /* Make it so content in the container can have a gap between each other */
-    /* margin-bottom: 10px; */
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    height: 200px;
+    gap: 10px;
+    width: 450px;
 }
 
 .header-title {
@@ -76,4 +86,25 @@
     color: #F9FAF8;
     font-weight: bold;
     font-size: 18px;
+    width: 130px;
+    height: 41px;
+    /* width: 1em;
+    height: */
+
+    /* wi */
+}
+
+.header-logo-links-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 150px;
+}
+
+.header-text-img-container {
+    display: flex;
+    /* width:
+    height:  */
+    gap: 40px;
+    justify-content: space-between;
+
 }
